@startuml
'https://plantuml.com/class-diagram



interface ScoreDAO{
    + doAdd(int score, double time, String ID):void
        + doSave(int gameMode):void
        + doRead():void
        + doRank(int gameMode)):void
        + doDelete():void
    + printToConsole():void

}



ScoreDAO <|.. DAOimpl
UserData <-- DAOimpl
Game ..> ScoreDAO



class DAOimpl {
    - userdata:List<UserData>
    + doAdd(int score, double time, String ID):void
    + doSave(int gameMode):void
    + doRead():void
    + doRank(int gameMode)):void
    + doDelete():void
    + printToConsole():void
    + getUsetDateList(): List<UserData>
    + findUserData(int gameMode):String

}

class UserData{
    - ID : String
    - score : int
    - time : double
    - dateInfo : String
    + getScore():int
    + getTime(): double
    + getDateInfo(): String
    + setScore():void
    + setTime(): void
    + setDateInfo(): void
}

@enduml